--- a/src/app/crud/crud.component.html
+++ b/src/app/crud/crud.component.html
@@ -1,69 +1,136 @@
 <div class="container">
-    
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="row">
-                <h3 class="bg-primary text-center text-white p-1">FORM DATA</h3>
-            </div>
-            <div class="row">
-                <div class="card">
-                    
-                    <div class="card-body">
-                      <h5 class="card-title">Enter your Personal Details</h5>
-                      <form>
-                        <div class="row  p-2">
-                          <div class="col">
-                            <input type="text" class="form-control" placeholder="First name">
-                          </div>
-                          <div class="col">
-                            <input type="text" class="form-control" placeholder="Last name">
-                          </div>
 
-                          <div class="col">
-                            <input type="text" class="form-control" placeholder="Last name">
-                          </div>
-                        </div>
+  <div class="row">
+    <div class="col-md-2"></div>
 
-                        <div class="row  p-2">
-                            <div class="col">
-                              <input type="text" class="form-control" placeholder="First name">
-                            </div>
-                            <div class="col">
-                              <input type="text" class="form-control" placeholder="Last name">
-                            </div>
-                            <div class="col">
-                                <input type="text" class="form-control" placeholder="Last name">
-                              </div>
+    <div class="col-md-8">
+      <div class="row">
+        <h3 class="bg-primary text-center text-white p-1">FORM DATA</h3>
+      </div>
+      <div class="row">
+        <div class="card">
 
-                            
-                          </div>
+          <div class="card-body">
+            <h3 class="card-title">Enter your Personal Details</h3>
+            <form [formGroup]="formdata" (ngSubmit)="onsubmit()">
+              <div class="row  p-2">
+                <div class="col">
+                  <label class="labelclass">First Name</label>
+                  <input type="text" class="form-control" placeholder="First name" formControlName="firstname">
+                </div>
+                <div class="col">
+                  <label class="labelclass">Last Name</label>
+                  <input type="text" class="form-control" placeholder="Last name" formControlName="lastname">
+                </div>
 
-                          <div class="row  p-2">
-                            <div class="col">
-                              <input type="text" class="form-control" placeholder="First name">
-                            </div>
-                            <div class="col">
-                                <mat-form-field>
-                                  <mat-label>Favorite food</mat-label>
-                                  <mat-select [(ngModel)]="selectedValue" name="gender">
-                                    <mat-option *ngFor="let gender of genders" [value]="gender">
-                                      {{gender}}
-                                    </mat-option>
-                                  </mat-select>
-                                </mat-form-field>
-                            </div>
-                            
+                <div class="col">
+                  <label class="labelclass">Email</label>
+                  <input type="text" class="form-control" placeholder="mailid" formControlName="email">
+                </div>
+              </div>
 
-                            
-                          </div>
-                      </form>
-                     
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
+              <div class="row  p-2">
+                <div class="col">
+                  <label class="labelclass">Age</label>
+                  <input type="number" class="form-control" placeholder="Enter your age" formControlName="age">
+                </div>
+                <div class="col">
+                  <label class="labelclass">Mobile Number</label>
+                  <input type="text" class="form-control" placeholder="Mobile number" formControlName="mobile">
+                </div>
+                <div class="col">
+                  <label class="labelclass">DOB</label>
+                  <input type="date" class="form-control" placeholder="Dateof Birth" formControlName="dob">
+                </div>
+
+
+              </div>
+
+              <div class="row  p-2">
+                <div class="col">
+                  <label class="labelclass">Perminent Address</label>
+                  <input type="text" class="form-control" placeholder="your permenent address" formControlName="place">
+                </div>
+                <div class="col">
+                  <label class="labelclass">Gender</label><br>
+                  <mat-form-field>
+                    <mat-label>Gender</mat-label>
+                    <mat-select formControlName="gender">
+                      <mat-option *ngFor="let gender of genderlist" [value]="gender">
+                        {{gender}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+
+              </div>
+              <div class="row p-2">
+                <div class="col">
+                  <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+                <div class="col">
+                  <button class="btn btn-danger" type="button">Cancel</button>
+                </div>
+              </div>
+
+            </form>
+
+
+          </div>
         </div>
-        <div class="col-md-3"></div>
-</div>
+      </div>
+    </div>
+    <div class="col-md-2">
+     
+    </div>
+  </div>
+
+  <!-- table view -->
+  <div class="row p-1">
+    <h1>Mange the Data</h1>
+  </div>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Email </th>
+          <th scope="col">Age</th>
+          <th scope="col">Mobile</th>
+          <th scope="col">DOB</th>
+          <th scope="col">Address</th>
+          <th scope="col">Gender</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
+          
+
+        </tr>
+      </thead> 
+      <tbody>
+        <tr *ngFor="let person of listData; let i = index">
+          <td scope="row">{{i + 1}}</td>
+          <td>{{person.firstname + " " + person.lastname}}</td>
+          <td>{{person.email}}</td>
+          <td>{{person.age}}</td>
+          <td>{{person.mobile}}</td>
+          <td>{{person.dob}}</td>
+          <td>@{{person.place}}</td>
+          <td>{{person.gender}}</td>
+          <td (click)="onEdit()" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+              <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+            </svg>
+          </td>
+          <td (click)="onDelete(i)" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+              <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+            </svg>
+          </td>
+        </tr>
+  
+        
+      </tbody>
+    </table>
+  </div>
 </div>
